# argos3-kheperaiv

./: .gitignore  README.md
docker/: Dockerfile
src/: CMakeLists.txt  TODO.org
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildFlags.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake  TargetKheperaIV.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/kheperaiv/: CMakeLists.txt
src/plugins/robots/kheperaiv/control_interface/: buzz_controller_kheperaiv.cpp  buzz_controller_kheperaiv.h  ci_kheperaiv_camera_sensor.cpp  ci_kheperaiv_camera_sensor.h  ci_kheperaiv_encoder_sensor.cpp  ci_kheperaiv_encoder_sensor.h  ci_kheperaiv_ground_sensor.cpp  ci_kheperaiv_ground_sensor.h  ci_kheperaiv_lidar_sensor.cpp  ci_kheperaiv_lidar_sensor.h  ci_kheperaiv_light_sensor.cpp  ci_kheperaiv_light_sensor.h  ci_kheperaiv_proximity_sensor.cpp  ci_kheperaiv_proximity_sensor.h  ci_kheperaiv_ultrasound_sensor.cpp  ci_kheperaiv_ultrasound_sensor.h
src/plugins/robots/kheperaiv/real_robot/: battery.c  main.cpp  real_kheperaiv.cpp  real_kheperaiv.h  real_kheperaiv_battery_sensor.cpp  real_kheperaiv_battery_sensor.h  real_kheperaiv_camera_sensor.cpp  real_kheperaiv_camera_sensor.h  real_kheperaiv_device.cpp  real_kheperaiv_device.h  real_kheperaiv_differential_steering_actuator.cpp  real_kheperaiv_differential_steering_actuator.h  real_kheperaiv_differential_steering_device.cpp  real_kheperaiv_differential_steering_device.h  real_kheperaiv_encoder_sensor.cpp  real_kheperaiv_encoder_sensor.h  real_kheperaiv_gripper_actuator.cpp  real_kheperaiv_gripper_actuator.h  real_kheperaiv_ground_sensor.cpp  real_kheperaiv_ground_sensor.h  real_kheperaiv_leds_actuator.cpp  real_kheperaiv_leds_actuator.h  real_kheperaiv_lidar_sensor.cpp  real_kheperaiv_lidar_sensor.h  real_kheperaiv_proximity_sensor.cpp  real_kheperaiv_proximity_sensor.h  real_kheperaiv_ultrasound_sensor.cpp  real_kheperaiv_ultrasound_sensor.h
src/plugins/robots/kheperaiv/simulator/: dynamics2d_kheperaiv_model.cpp  dynamics2d_kheperaiv_model.h  kheperaiv_entity.cpp  kheperaiv_entity.h  kheperaiv_ground_rotzonly_sensor.cpp  kheperaiv_ground_rotzonly_sensor.h  kheperaiv_lidar_default_sensor.cpp  kheperaiv_lidar_default_sensor.h  kheperaiv_light_rotzonly_sensor.cpp  kheperaiv_light_rotzonly_sensor.h  kheperaiv_measures.cpp  kheperaiv_measures.h  kheperaiv_proximity_default_sensor.cpp  kheperaiv_proximity_default_sensor.h  kheperaiv_ultrasound_default_sensor.cpp  kheperaiv_ultrasound_default_sensor.h  qtopengl_kheperaiv.cpp  qtopengl_kheperaiv.h
src/testing/: CMakeLists.txt  kheperaiv_diffusion.cpp  kheperaiv_diffusion.h  test.bzz  testbuzzexperiment.argos  testexperiment.argos
